# duckdb-oast

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  test_data.txt
.github/workflows/: MainDistributionPipeline.yml
src/: add_numbers.c  oast_base32.c  oast_decode.c  oast_domains.c  oast_extension.c  oast_extract.c  oast_functions.c  oast_macros.h  oast_validate.c
src/include/: oast_base32.h  oast_decode.h  oast_domains.h  oast_extract.h  oast_functions.h  oast_validate.h
test/sql/: oast.test
